Revert "fixup PixelPropsUtils"
This reverts commit 06172d3b0833ef26c6bf53f7b44d9c399561fbe0.